--- a/index.html
+++ b/index.html
@@ -83,8 +83,38 @@
                   Latest
                 </a>
               </li>
+              <li class="item-bottom-navbar">
+                <a href="#" class="link-item-bottom-navbar">
+                  Hard Fork
+                </a>
+              </li>
+              <li class="item-bottom-navbar">
+                <a href="#" class="link-item-bottom-navbar">
+                  Plugged
+                </a>
+              </li>
+              <li class="item-bottom-navbar">
+                <a href="#" class="link-item-bottom-navbar">
+                  ReadMe
+                </a>
+              </li>
+              <li class="item-bottom-navbar">
+                <a href="#" class="link-item-bottom-navbar">
+                  Growth Quarters
+                </a>
+              </li>
             </ul>
           </div>
+        </li>
+        <li class="margin-left-auto">
+          <button type="submit" class="without-style-button">
+            <ion-icon name="search-outline" class="icons-navbar icons-navbar-1 bottom-navbar-list"></ion-icon>
+          </button>
+        </li>
+        <li class="icon-menu-outline">
+          <button type="submit" class="without-style-button">
+            <ion-icon name="menu-outline" class="icons-navbar icons-navbar-2 bottom-navbar-list"></ion-icon>
+          </button>
         </li>
       </ul>
     </nav>
