Feat: finish second section

--- a/index.html
+++ b/index.html
@@ -256,6 +256,37 @@
         </small>
       </div>
     </article>
+    <article class="seventh-article-second-section">
+      <div class="picture-7-article-second-section">
+      </div>
+      <div class="info-first-article-second-section">
+        <h4>
+          <a href="#" class="title-info-first-article-second-section">
+            How to manipulate date and time in Javascript
+          </a>
+        </h4>
+        <small class="text-info-first-article-second-section">
+          <a href="#" class="autor-first-article-second-section">Live Code Stream</a> <span class="dash-point-second-section">●</span> 1 day ago
+        </small>
+      </div>
+    </article>
+    <article class="eighth-article-second-section">
+      <div class="picture-8-article-second-section">
+      </div>
+      <div class="info-first-article-second-section">
+        <h4>
+          <a href="#" class="title-info-first-article-second-section">
+            Week-by-week breakdown of my $15M virtual fundraising journey in 2020
+          </a>
+        </h4>
+        <small class="text-info-first-article-second-section">
+          <a href="#" class="autor-first-article-second-section">Thierry Schellenbach</a> <span class="dash-point-second-section">●</span> 1 day ago
+        </small>
+      </div>
+    </article>
+  </section>
+  <section class="third-section">
+    
   </section>
 </body>
 </html>
