--- a/index.html
+++ b/index.html
@@ -286,7 +286,159 @@
     </article>
   </section>
   <section class="third-section">
-    
+    <article class="title-third-section">
+      <h1>
+        <a href="#" class="text-decoration-none text-title-second-section line-height-2rem">
+          Latest funding rounds on Index.co <ion-icon name="chevron-forward-outline" class="arrow-right-title"></ion-icon>
+        </a>
+      </h1>
+      <div class="subtitle-third-section">
+        <p>
+          <a href="#" class="text-decoration-none p-1-title-second-section">
+            See more
+          </a>
+        </p>
+        <p>
+          <a href="#" class="text-decoration-none p-2-title-second-section">
+            Get updates by email
+          </a>
+        </p>
+        <p>
+          <a href="#" class="text-decoration-none p-3-title-second-section">
+            Add info
+          </a>
+        </p>
+      </div>
+    </article>
+    <article class="first-article-third-section">
+      <div>
+        <div class="pic-1-first-article-third-section">
+        </div>
+        <h2 class="title-first-article-third-section">
+          BharatPe
+        </h2>
+        <div class="subtitle-first-article-third-section">
+          <h3 class="subtitle-1-first-article-third-section">
+            ₹2b
+          </h3>
+          <small class="subtitle-2-first-article-third-section">
+            Debt financing
+          </small>
+        </div>
+      </div>
+      <div class="body-first-article-third-section">
+        <small class="line-body-first-article-third-section">
+          <ion-icon name="pricetag-outline" class="icons-first-article-third-section"></ion-icon>
+          <span>
+            <a href="#" class="text-icons-first-article-third-section">
+              Payments, +3
+            </a>
+          </span>
+        </small>
+        <small class="line-body-first-article-third-section">
+          <ion-icon name="briefcase-outline" class="icons-first-article-third-section"></ion-icon>
+          <span>
+            <a href="#" class="text-icons-first-article-third-section">
+              ICICI Bank, +2
+            </a>
+          </span>
+        </small>
+      </div>
+      <div class="footer-first-article-third-section">
+        <small>
+          <a href="#" class="text-footer-first-article-third-section">
+            Exclusive: BharatPe raises Rs 200 Cr debt from ICICI, Alteria and Innoven
+            <span class="another-text-footer-first-article-third-section">on Entrackr</span>
+          </a>
+        </small>
+      </div>
+    </article>
+    <article class="second-article-third-section">
+      <div>
+        <div class="pic-2-first-article-third-section">
+        </div>
+        <h2 class="title-first-article-third-section">
+          Oqton
+        </h2>
+        <div class="subtitle-first-article-third-section">
+          <h3 class="subtitle-1-first-article-third-section">
+            $40M
+          </h3>
+          <small class="subtitle-2-first-article-third-section">
+            Series A
+          </small>
+        </div>
+      </div>
+      <div class="body-first-article-third-section">
+        <small class="line-body-first-article-third-section">
+          <ion-icon name="pricetag-outline" class="icons-first-article-third-section"></ion-icon>
+          <span>
+            <a href="#" class="text-icons-first-article-third-section">
+              Technology, +3
+            </a>
+          </span>
+        </small>
+        <small class="line-body-first-article-third-section">
+          <ion-icon name="briefcase-outline" class="icons-first-article-third-section"></ion-icon>
+          <span>
+            <a href="#" class="text-icons-first-article-third-section">
+              PMW, +7
+            </a>
+          </span>
+        </small>
+      </div>
+      <div class="footer-first-article-third-section">
+        <small>
+          <a href="#" class="text-footer-first-article-third-section">
+            Oqton raises $40 million to apply AI to additive manufacturing
+            <span class="another-text-footer-first-article-third-section">on VentureBeat</span>
+          </a>
+        </small>
+      </div>
+    </article>
+    <article class="third-article-third-section">
+      <div>
+        <div class="pic-3-first-article-third-section">
+        </div>
+        <h2 class="title-first-article-third-section">
+          Swimm
+        </h2>
+        <div class="subtitle-first-article-third-section">
+          <h3 class="subtitle-1-first-article-third-section">
+            $5.7M
+          </h3>
+          <small class="subtitle-2-first-article-third-section">
+            Seed fund
+          </small>
+        </div>
+      </div>
+      <div class="body-first-article-third-section">
+        <small class="line-body-first-article-third-section">
+          <ion-icon name="pricetag-outline" class="icons-first-article-third-section"></ion-icon>
+          <span>
+            <a href="#" class="text-icons-first-article-third-section">
+              Information Technology, +3
+            </a>
+          </span>
+        </small>
+        <small class="line-body-first-article-third-section">
+          <ion-icon name="briefcase-outline" class="icons-first-article-third-section"></ion-icon>
+          <span>
+            <a href="#" class="text-icons-first-article-third-section">
+              Pitango Venture Capital
+            </a>
+          </span>
+        </small>
+      </div>
+      <div class="footer-first-article-third-section">
+        <small>
+          <a href="#" class="text-footer-first-article-third-section">
+            Swimm raises $5.7M in seed funding round and launches its unique code-sharing platform
+            <span class="another-text-footer-first-article-third-section">on SiliconANGLE</span>
+          </a>
+        </small>
+      </div>
+    </article>
   </section>
 </body>
 </html>
